# Partition-Implementations

./: .gitignore  Makefile  README.md
Analysis/: Analisis complejidad Particiones.ods
Code/: partitions.hs  partitions.py
Haskell_Partitions/: CHANGELOG.md  Haskell-Partitions.cabal
Haskell_Partitions/app/: partitions.hs
Python/: partitions.py
