cabal-version:      2.4
name:               Haskell-Partitions
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Haskell-Partitions
    main-is:          partitions.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18.3.0,
        deepseq >=1.1,
        primitive >=0.6.4,
        parallel >=3.2,
        vector >=0.13,
        array >=0.5,
    hs-source-dirs:   app
    default-language: Haskell2010
